# report-for-me

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: pipeline.md  test.md
.claude/skills/api-conventions/: SKILL.md
.claude/skills/subagent-strategy/: SKILL.md
.claude/skills/testing-patterns/: SKILL.md
.github/ISSUE_TEMPLATE/: story.yml
.github/workflows/: claude-dev.yml  claude-fix.yml  claude-review.yml  linear-sync.yml
archive/notebooks_16-3/: 04_heterogeneity_analysis.ipynb
archive/notebooks_17-3/: 03_correlation_analysis.ipynb  05_liquidity_analysis.ipynb  06_custom_indices.ipynb
docs/: reference.md
docs/requirements/: README.md  wine-diversification-report-follow-up.md  wine-divsersification-report-original.md  wine-divsersification-report.md
notebooks/: 01_data_setup.ipynb  02_currency_analysis.ipynb  03_correlation_analysis.ipynb  04_heterogeneity_analysis.ipynb  README.md
projects/archive/notebooks_16-3/: 06_custom_indices.ipynb
projects/correlation-diversification/: rebuttals-to-analyse.md  winefi-diversification-report.md
projects/correlation-diversification/data/: 25-02-11_lx1000_components_2020-2025.csv  bids_monthly.parquet  comparison_assets_monthly.parquet  focal_wines_vwap_monthly.parquet  fx_rates_monthly.parquet  liv-ex_index_history.csv  livex_indices_clean.parquet  top30_wines_vwap_monthly.parquet
projects/notebooks/: 05_liquidity_analysis.ipynb  06_custom_indices.ipynb  test.ipynb
(+8 files in other folders)
